[gd_scene load_steps=6 format=3 uid="uid://c5ein6jhchjn2"]

[ext_resource type="Script" path="res://scripts/main_game.gd" id="1_pigs5"]
[ext_resource type="Script" path="res://scripts/ring_placement.gd" id="2_ttvye"]
[ext_resource type="Texture2D" uid="uid://bq7ohjhesdewl" path="res://images/arrow.png" id="3_y5sdp"]
[ext_resource type="Texture2D" uid="uid://d1f3ly3qkbuf6" path="res://images/heart.png" id="4_ml6qp"]

[sub_resource type="Gradient" id="Gradient_3id2h"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[node name="MainGame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pigs5")

[node name="Timer" type="Label" parent="."]
auto_translate_mode = 2
layout_mode = 0
offset_left = 694.0
offset_right = 767.0
offset_bottom = 88.0
theme_override_font_sizes/font_size = 64
text = "15"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 601.0
offset_top = 178.0
offset_right = 775.0
offset_bottom = 515.0
color = Color(0.619608, 1, 1, 0.592157)

[node name="ScrollContainer" type="ScrollContainer" parent="ColorRect"]
layout_mode = 0
offset_left = 14.0
offset_right = 150.0
offset_bottom = 337.0

[node name="UsedWords" type="Label" parent="ColorRect/ScrollContainer"]
unique_name_in_owner = true
auto_translate_mode = 2
layout_mode = 2
text = "Used Words:"

[node name="RoomName" type="Label" parent="."]
auto_translate_mode = 2
layout_mode = 0
offset_top = 515.0
offset_right = 800.0
offset_bottom = 603.0
theme_override_colors/font_color = Color(0.69, 0.69, 0.69, 0.596078)
theme_override_font_sizes/font_size = 64
text = "Room Name ZJS"
vertical_alignment = 2

[node name="Input" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 192.0
offset_top = 531.0
offset_right = 574.0
offset_bottom = 579.0
theme_override_font_sizes/font_size = 24
placeholder_text = "Enter Word Here..."

[node name="Hint" type="Label" parent="."]
auto_translate_mode = 2
layout_mode = 0
offset_right = 800.0
offset_bottom = 88.0
theme_override_font_sizes/font_size = 64
text = "ing"
horizontal_alignment = 1
vertical_alignment = 1

[node name="InputReflection" type="Label" parent="."]
layout_mode = 0
offset_left = 1.0
offset_top = 83.0
offset_right = 801.0
offset_bottom = 125.0
text = "Your Input Reflection for Mobile Friendliness"
horizontal_alignment = 1
vertical_alignment = 1
text_overrun_behavior = 3

[node name="ExitButton" type="Button" parent="."]
layout_mode = 0
offset_left = 19.0
offset_top = 31.0
offset_right = 105.0
offset_bottom = 62.0
text = "Exit Room"

[node name="EnterButton" type="Button" parent="."]
layout_mode = 0
offset_left = 591.0
offset_top = 530.0
offset_right = 677.0
offset_bottom = 579.0
text = "Enter"

[node name="StartButton" type="Button" parent="."]
layout_mode = 0
offset_left = 19.0
offset_top = 73.0
offset_right = 105.0
offset_bottom = 104.0
theme_override_colors/font_color = Color(0, 0.862745, 0, 1)
text = "Start Game"

[node name="CloseButton" type="Button" parent="."]
layout_mode = 0
offset_left = 19.0
offset_top = 113.0
offset_right = 115.0
offset_bottom = 144.0
theme_override_colors/font_color = Color(1, 0.27, 0.27, 1)
text = "Close Room"

[node name="CenterRing" type="Container" parent="."]
layout_mode = 0
offset_left = 400.0
offset_top = 283.0
offset_right = 564.0
offset_bottom = 488.0
script = ExtResource("2_ttvye")

[node name="Status" type="Label" parent="."]
auto_translate_mode = 2
layout_mode = 0
offset_left = 192.0
offset_top = 499.0
offset_right = 574.0
offset_bottom = 522.0
text = "\"internationalization\" is already used!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Dictionary" type="RichTextLabel" parent="."]
layout_mode = 0
offset_top = 170.0
offset_right = 181.0
offset_bottom = 480.0
bbcode_enabled = true
text = "[b]Word[/b] Definition will be shown here if possible..."

[node name="Arrow" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 360.0
offset_top = 245.0
offset_right = 432.0
offset_bottom = 340.0
pivot_offset = Vector2(36, 48)
texture = ExtResource("3_y5sdp")
expand_mode = 1

[node name="HealParticle" type="CPUParticles2D" parent="."]
emitting = false
amount = 16
one_shot = true
texture = ExtResource("4_ml6qp")
emission_shape = 1
emission_sphere_radius = 50.0
direction = Vector2(0, -1)
gravity = Vector2(0, 0)
initial_velocity_min = 20.0
initial_velocity_max = 50.0

[node name="HurtParticle" type="CPUParticles2D" parent="."]
emitting = false
amount = 1
one_shot = true
texture = ExtResource("4_ml6qp")
particle_flag_align_y = true
direction = Vector2(0, -1)
gravity = Vector2(0, 500)
initial_velocity_min = 200.0
initial_velocity_max = 300.0
scale_amount_min = 2.0
scale_amount_max = 2.0
color_ramp = SubResource("Gradient_3id2h")

[node name="Loading" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_right = 800.0
offset_bottom = 603.0
color = Color(0.670588, 0.666667, 0.611765, 0.407843)

[node name="Label" type="Label" parent="Loading"]
layout_mode = 0
offset_right = 800.0
offset_bottom = 603.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 64
text = "Connecting..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="AcceptDialog" type="AcceptDialog" parent="."]
initial_position = 2

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="text_changed" from="Input" to="." method="_on_input_text_changed"]
[connection signal="text_submitted" from="Input" to="." method="_on_input_text_submitted"]
[connection signal="pressed" from="ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="EnterButton" to="." method="_on_enter_button_pressed"]
[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="sort_children" from="CenterRing" to="CenterRing" method="_on_sort_children"]
[connection signal="confirmed" from="AcceptDialog" to="." method="_on_accept_dialog_confirmed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_http_request_request_completed"]
